include/altdss/capi/dss.h

    ALTDSS_CAPI_DLL void Reactors_Set_kV(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_kvar(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_Phases(int32_t Integer);
    ALTDSS_CAPI_DLL void Reactors_Set_LmH(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_R(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_X(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_Rp(double Value);
    ALTDSS_CAPI_DLL void Reactors_Set_RCurve(const char* Value);
    ALTDSS_CAPI_DLL void Reactors_Get_Rmatrix(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Rmatrix_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Rmatrix(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Xmatrix(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Xmatrix_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Xmatrix(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Get_Z1(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z1_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z1(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z2(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z2_GR(void);
    ALTDSS_CAPI_DLL void Reactors_Set_Z2(const double* ValuePtr, int32_t ValueCount);
    ALTDSS_CAPI_DLL void Reactors_Get_Z0(double** ResultPtr, int32_t* ResultDims);
    ALTDSS_CAPI_DLL void Reactors_Get_Z0_GR(void);