src/CAPI/CAPI_Reactors.pas


    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetString(ord(TReactorProp.LCurve), Value, []);
        Exit;
    end;
    // Note: EPRI's code actually just sets the curve name, doesn't load it here.
    pReactor.LCurveObj := DSSPrime.XYCurveClass.Find(Value);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_RCurve(const Value: PAnsiChar); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetString(ord(TReactorProp.RCurve), Value, []);
        Exit;
    end;
    // Note: EPRI's code actually just sets the curve name, doesn't load it here.
    pReactor.RCurveObj := DSSPrime.XYCurveClass.Find(Value);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_kV(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.kV), Value, []);
        Exit;
    end;
    pReactor.kVRating := Value;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_kvar(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.kvar), Value, []);
        Exit;
    end;
    pReactor.kvarRating := Value;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_LmH(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.LmH), Value, []);
        Exit;
    end;
    pReactor.L := Value / 1000.0;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Phases(Value: Integer); CDECL;
var
    elem: TReactorObj;
begin
    if not _activeObj(DSSPrime, elem) then
        Exit;
    if Value < 1 then
    begin
        DoSimpleMsg(DSSPrime, '%s: Number of phases must be a positive integer!', [elem.FullName()], 6568);
        Exit;
    end;
    elem.SetInteger(ord(TReactorProp.Phases), Value, []);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_R(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.R), Value, []);
        Exit;
    end;
    pReactor.Z.re := Value;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_X(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.X), Value, []);
        Exit;
    end;
    pReactor.Z.im := Value;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Rp(Value: Double); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDouble(ord(TReactorProp.Rp), Value, []);
        Exit;
    end;
    pReactor.Rp := Value;
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Rmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
        
    if Sqr(pReactor.Nphases) <> ValueCount then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, Sqr(pReactor.Nphases)], 5024);
        end;
        Exit;
    end;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.RMatrix), ValuePtr, ValueCount, []);
        Exit;
    end;
    Reallocmem(pReactor.Rmatrix, SizeOf(Double) * Sqr(pReactor.Nphases));
    Move(ValuePtr^, pReactor.Rmatrix[1], ValueCount * SizeOf(Double));
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Xmatrix(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    pReactor: TReactorObj;
begin
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    if Sqr(pReactor.Nphases) <> ValueCount then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, Sqr(pReactor.Nphases)], 5024);
        end;
        Exit;
    end;
    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.XMatrix), ValuePtr, ValueCount, []);
        Exit;
    end;
    Reallocmem(pReactor.Xmatrix, SizeOf(Double) * Sqr(pReactor.Nphases));
    Move(ValuePtr^, pReactor.Xmatrix[1], ValueCount * SizeOf(Double));
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
procedure Reactors_Get_Rmatrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    
    if pReactor.Rmatrix = NIL then
        Exit; //TODO: would an error here be useful?

    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pReactor.Nphases * pReactor.Nphases, pReactor.Nphases, pReactor.Nphases);
    Move(pReactor.Rmatrix[1], ResultPtr^, ResultCount^ * SizeOf(Double));
end;

procedure Reactors_Get_Rmatrix_GR(); CDECL;
// Same as Reactors_Get_Rmatrix but uses global result (GR) pointers
begin
    Reactors_Get_Rmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Xmatrix(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    if pReactor.Xmatrix = NIL then
        Exit;
        
    DSS_RecreateArray_PDouble(ResultPtr, ResultCount, pReactor.Nphases * pReactor.Nphases, pReactor.Nphases, pReactor.Nphases);
    Move(pReactor.Xmatrix[1], ResultPtr^, ResultCount^ * SizeOf(Double));
end;

procedure Reactors_Get_Xmatrix_GR(); CDECL;
// Same as Reactors_Get_Xmatrix but uses global result (GR) pointers
begin
    Reactors_Get_Xmatrix(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Z1(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    Result[0] := pReactor.Z1.Re;
    Result[1] := pReactor.Z1.Im;
end;

procedure Reactors_Get_Z1_GR(); CDECL;
// Same as Reactors_Get_Z1 but uses global result (GR) pointers
begin
    Reactors_Get_Z1(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Z2(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    Result[0] := pReactor.Z2.Re;
    Result[1] := pReactor.Z2.Im;
end;

procedure Reactors_Get_Z2_GR(); CDECL;
// Same as Reactors_Get_Z2 but uses global result (GR) pointers
begin
    Reactors_Get_Z2(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Z0(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    Result[0] := pReactor.Z0.Re;
    Result[1] := pReactor.Z0.Im;
end;

procedure Reactors_Get_Z0_GR(); CDECL;
// Same as Reactors_Get_Z0 but uses global result (GR) pointers
begin
    Reactors_Get_Z0(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Get_Z(var ResultPtr: PDouble; ResultCount: PAPISize); CDECL;
var
    Result: PDoubleArray0;
    pReactor: TReactorObj;
begin
    DefaultResult(ResultPtr, ResultCount);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;

    Result := DSS_RecreateArray_PDouble(ResultPtr, ResultCount, 2);
    Result[0] := pReactor.Z.re;
    Result[1] := pReactor.Z.im;
end;

procedure Reactors_Get_Z_GR(); CDECL;
// Same as Reactors_Get_Z but uses global result (GR) pointers
begin
    Reactors_Get_Z(DSSPrime.GR_DataPtr_PDouble, @DSSPrime.GR_Counts_PDouble[0])
end;

//------------------------------------------------------------------------------
procedure Reactors_Set_Z2(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray0(ValuePtr);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    
    if (ValueCount <> 2) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, 2], 5024);
        end;
        Exit;
    end;

    if (DSS_EXTENSIONS_COMPAT and ord(DSSCompatFlag.SkipSideEffects)) = 0 then
    begin
        pReactor.SetDoubles(ord(TReactorProp.Z2), ValuePtr, ValueCount, []);
        Exit;
    end;
    pReactor.Z2 := Cmplx(Value[0], Value[1]);
    pReactor.SetYprimInvalid(true);
end;
//------------------------------------------------------------------------------
procedure Reactors_Set_Z1(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    Value: PDoubleArray0;
    pReactor: TReactorObj;
begin
    Value := PDoubleArray0(ValuePtr);
    if not _activeObj(DSSPrime, pReactor) then
        Exit;
    
    if (ValueCount <> 2) then
    begin
        if DSS_CAPI_EXT_ERRORS then
        begin
            DoSimpleMsg(DSSPrime, 'The number of values provided (%d) does not match the expected (%d).', [ValueCount, 2], 5024);
        end;
        Exit;
    end;
